# factorNCI

./: README.md
.github/workflows/: ci.yml
refactorNCI/: .coverage  pyproject.toml
refactorNCI/refactornci/: assignment-lists-solutions.py  dll.py  node.py
refactorNCI/tests/: test_dll.py  test_node.py
