[tool.poetry]
name = "refactornci"
version = "0.1.0"
description = ""
authors = ["Timothy D. Enders <104176445+Timdenders@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.1.0"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
